--- a/serverless.yml
+++ b/serverless.yml
@@ -13,8 +13,8 @@
 
 service: serverless-ws
 # app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
+app: serverless-ws-app
+org: ronaldscruz16
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -26,10 +26,10 @@ provider:
   region: sa-east-1
   memorySize: 256
   iamRoleStatements:
-    - Effect: Allow
+    - Effect: 'Allow'
       Action:
-        - s3: GetObject
-        - s3: PutObject
+        - 's3:GetObject'
+        - 's3:PutObject'
       Resource:
         - "arn:aws:s3:::*"
 
@@ -37,16 +37,16 @@ functions:
   optimize:
     handler: optimize.handle
     environment:
-      bucket: serveless-aws
+      bucket: rscrz-serveless-aws
     events:
       - s3:
-          bucket: serverless-aws
+          bucket: rscrz-serverless-aws
           event: s3:ObjectCreated:*
           rules:
             - prefix: /upload
             - suffix: .jpg
       - s3:
-          bucket: serverless-aws
+          bucket: rscrz-serverless-aws
           event: s3:ObjectCreated:*
           rules:
             - prefix: /upload
